# nifi-operator

./: .gitignore  CHANGELOG.md  Cargo.nix  Cargo.toml  Makefile  README.adoc  README.md  bors.toml  crate-hashes.json  deny.toml  static-auth-class.yaml  static-nifi.yaml  static-zk.yaml
.ci/integration-tests/aws-eks/: cluster.yaml
.ci/integration-tests/azure-aks/: cluster.yaml  test.sh
.ci/integration-tests/hcloud-centos-8/: cluster.yaml
.ci/integration-tests/ionos-k8s/: cluster.yaml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: 02-bug_report.yml  bug_report.yml  config.yml  new_version.md
.github/workflows/: build.yaml  build.yml  build_artifacts.yml  docker.yml  nightly.yml  publish_dev_artifacts.yml  publish_main_artifacts.yml  publish_pr_artifacts.yml  publish_release_artifacts.yml  rust.yml
.readme/: README.md.j2
.readme/partials/: main.md.j2
crd/: Cargo.toml
crd/src/: lib.rs
deploy/: DO_NOT_EDIT.md
deploy/config-spec/: properties.yaml
deploy/crd/: nificluster.crd.yaml  server.nifi.crd.yaml
deploy/helm/nifi-operator/: Chart.yaml  README.md  values.yaml
deploy/helm/nifi-operator/configs/: properties.yaml
deploy/helm/nifi-operator/crds/: crds.yaml
deploy/helm/nifi-operator/templates/: clusterrole-operator.yaml  clusterrole-product.yaml  roles.yaml
deploy/manifests/: configmap.yaml  crds.yaml  deployment.yaml  roles.yaml  serviceaccount.yaml
deploy/olm/: bundle.sh
deploy/olm/23.4.0/manifests/: roles.yaml  stackable-nifi-operator.clusterserviceversion.yaml
docker/: Dockerfile
docs/: antora.yml  templating_vars.yaml
docs/modules/ROOT/: nav.adoc
docs/modules/ROOT/pages/: commandline_args.adoc  config_properties.adoc  configuration.adoc  dependencies.adoc  env_var_args.adoc  index.adoc  installation.adoc  monitoring.adoc  usage.adoc
docs/modules/ROOT/partials/: config_properties.adoc  supported-versions.adoc
docs/modules/getting_started/pages/: first_steps.adoc  index.adoc  installation.adoc
docs/modules/nifi/: nav.adoc
docs/modules/nifi/images/: .$nifi_overview.drawio.svg.bkp
docs/modules/nifi/pages/: configuration.adoc  index.adoc  troubleshooting.adoc
docs/modules/nifi/partials/: env_var_args.adoc  nav.adoc  supported-versions.adoc
docs/modules/usage_guide/: nav.adoc
docs/modules/usage_guide/pages/: configuration-environment-overrides.adoc  configuration.adoc  index.adoc  log-aggregation.adoc  monitoring.adoc  resource-configuration.adoc  security.adoc  updating.adoc
examples/: README-entra-example.md  admin_credentials.yaml  deploy_nifi.yaml  entra_nifi.yaml  sensitive-property-key-secret.yaml  simple-nifi-cluster.yaml  simple-nifi-service.yaml  simple-nificluster.yaml
examples/entra-static-nifi-policies/: README-entra-example.md  entra_nifi.yaml
examples/simple-cluster/: simple-nifi-cluster.yaml
extra/: crds.yaml
nix/: meta.json  sources.json
operator/: Cargo.toml
operator/src/: config.rs  error.rs  lib.rs  monitoring.rs  pod_utils.rs
packaging/: buildrpm.sh  copy_assets.py
packaging/debian/: stackable-nifi-operator.service
packaging/rpm/SPECS/: stackable-nifi-operator.spec
python/: cargo_version.py  requirements.txt
rust/crd/: Cargo.toml
rust/crd/src/: affinity.rs  authentication.rs  lib.rs  tls.rs
rust/operator/: Cargo.toml
rust/operator-binary/: Cargo.toml  build.rs
rust/operator-binary/resources/: authorizers.xml  logback.xml  singleuser-login-identity-providers.xml
rust/operator-binary/src/: authentication.rs  config.rs  controller.rs  framework.rs  listener.rs  main.rs  monitoring.rs  nifi_controller.rs  product_logging.rs  service.rs  stackable-nifi-operator.rs  storage_quantity.rs
rust/operator-binary/src/config/: jvm.rs  mod.rs
rust/operator-binary/src/controller/: build.rs  dereference.rs  mod.rs  upgrade.rs  validate.rs
rust/operator-binary/src/crd/: affinity.rs  authentication.rs  authorization.rs  constants.rs  mod.rs  sensitive_properties.rs  storage.rs  tls.rs  utils.rs
rust/operator-binary/src/framework/: role_utils.rs
rust/operator-binary/src/operations/: credentials.rs  graceful_shutdown.rs  mod.rs  nifi_api.rs  pdb.rs  scaling.rs  upgrade.rs
rust/operator-binary/src/reporting_task/: mod.rs
rust/operator-binary/src/security/: authentication.rs  authorization.rs  mod.rs  oidc.rs  sensitive_key.rs  tls.rs
rust/operator-binary/src/webhooks/: conversion.rs
rust/operator/src/: config.rs  error.rs  lib.rs  monitoring.rs
scripts/: docs_templating.sh  generate-manifests.sh
server/: Cargo.toml  build.rs
server/packaging/: buildrpm.sh  copy_assets.py
server/packaging/debian/: service
server/packaging/rpm/SOURCES/stackable-nifi-operator-server-VERSION/usr/lib/systemd/system/: stackable-nifi-operator-server.service
server/packaging/rpm/SPECS/: stackable-nifi-operator-server.spec
server/src/: main.rs
tests/: kuttl-test.yaml.jinja2  release.yaml  test-definition.yaml
tests/templates/kuttl/cluster-sync-cs-bug/: 00-patch-ns.yaml.j2  20-assert.yaml  20-install-nifi.yaml.j2  30-assert.yaml  30-install-test-pod.yaml.j2  40-assert.yaml.j2  40-prepare-test.yaml  60-trigger.yaml.j2  test_cluster_healthy.py  test_trigger_reconnect.py
tests/templates/kuttl/cluster_operation/: 10-install-zk.yaml.j2  20-assert.yaml  20-install-nifi.yaml.j2  30-assert.yaml  30-stop-nifi.yaml.j2  40-assert.yaml  40-pause-nifi.yaml.j2  50-assert.yaml  50-restart-nifi.yaml.j2
tests/templates/kuttl/custom-components-git-sync/: 00-rbac.yaml.j2  15-assert.yaml  15-create-ca-cert.yaml  15-rbac.yaml.j2  18-nginx-proxy.yaml  30-assert.yaml  30-install-nifi.yaml.j2  30_install-nifi.yaml.j2  40-test-nifi-greeting.yaml  README.md
tests/templates/kuttl/custom-processors-git-sync/: 20-install-zk.yaml.j2  30-install-nifi.yaml.j2  40-assert.yaml
tests/templates/kuttl/external-access/: 15-create-listener-class.yaml  15-create-listener-classes.yaml  15_listener-class.yaml  15_listener_classes.yaml.j2  20-install-zk.yaml.j2  30-assert.yaml  30-install-nifi.yaml.j2  30_nifi.yaml.j2
tls/: keystore.jks  truststore.jks
(+328 files in other folders)
