[package]
authors = ["Malte Sander <malte.sander.it@gmail.com>"]
description = "Contains the Apache NiFi CRD structs and utilities"
edition = "2018"
license = "OSL-3.0"
name = "stackable-nifi-crd"
version = "0.1.0-nightly"

[dependencies]
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "main" }
stackable-zookeeper-crd = { git = "https://github.com/stackabletech/zookeeper-operator.git", branch = "main"}

k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_20"] }
kube = { version = "0.52", default-features = false, features = ["jsonpatch", "derive"] }
kube-runtime = "0.52"
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.21"
strum_macros = "0.21"

[dev-dependencies]
k8s-openapi = { version = "0.11", default-features = false, features = ["v1_20"] }

[features]
default = ["native-tls"]
native-tls = ["kube/native-tls"]
rustls-tls = ["kube/rustls-tls"]
