[package]
authors = ["Malte Sander <malte.sander.it@gmail.com>"]
description = "Contains the Apache NiFi CRD structs and utilities"
edition = "2018"
license = "OSL-3.0"
name = "stackable-nifi-crd"
repository = "https://github.com/stackabletech/nifi-operator"
version = "0.1.0-nightly"

[dependencies]
product-config = { git = "https://github.com/stackabletech/product-config.git", branch = "main" }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "main" }
stackable-zookeeper-crd = { git = "https://github.com/stackabletech/zookeeper-operator.git", branch = "main"}

k8s-openapi = { version = "0.12", default-features = false }
kube = { version = "0.58", default-features = false, features = ["jsonpatch", "derive"] }
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
strum = "0.21"
strum_macros = "0.21"

[dev-dependencies]
k8s-openapi = { version = "0.12", default-features = false, features = ["v1_21"] }

[features]
default = ["native-tls"]
native-tls = ["kube/native-tls"]
rustls-tls = ["kube/rustls-tls"]
