[package]
name = "stackable-nifi-operator"
version = "0.1.0"
authors = ["Malte Sander <malte.sander.it@gmail.com>"]
edition = "2018"
description = "Kubernetes Operator library to deal with Apache NiFi custom resources"
license = "OSL-3.0"

[dependencies]
stackable-nifi-crd = { path = "../crd" }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "main" }

async-trait = "0.1"
futures = "0.3"
k8s-openapi = { version = "0.11", default-features = false, features = ["v1_20"] }
kube = { version = "0.52", default-features = false, features = ["jsonpatch"] }
kube-runtime = "0.52"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.5", features = ["macros"] }
tracing = "0.1"
strum = "0.20"
strum_macros = "0.20"
