[package]
name = "stackable-nifi-operator-server"
version = "0.1.0-nightly"
authors = ["Malte Sander <malte.sander.it@gmail.com>"]
edition = "2018"
description = "Stackable Operator for Apache NiFi"
license = "OSL-3.0"

[dependencies]
stackable_config = { git = "https://github.com/stackabletech/common.git", branch = "main" }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "main" }
stackable-nifi-crd = { path = "../crd" }
stackable-nifi-operator = { path = "../operator" }

serde_yaml = "0.8"
tokio = { version = "1.6", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"

[package.metadata.deb]
maintainer-scripts = "packaging/debian/"
systemd-units = { enable = false }
assets = [
    ["../target/release/stackable-nifi-operator-server", "opt/stackable/nifi-operator/", "755"],
]
