[package]
authors = ["Malte Sander <malte.sander.it@gmail.com>"]
build = "build.rs"
edition = "2018"
description = "Stackable Operator for Apache NiFi"
license = "OSL-3.0"
name = "stackable-nifi-operator-server"
repository = "https://github.com/stackabletech/nifi-operator"
version = "0.1.0"

[dependencies]
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.1.0" }
stackable-nifi-crd = { path = "../crd" }
stackable-nifi-operator = { path = "../operator" }

clap = "2.33"
serde_yaml = "0.8"
tokio = { version = "1.10", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"

[build-dependencies]
built = { version =  "0.5", features = ["chrono", "git2"] }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.1.0" }
stackable-nifi-crd = { path = "../crd" }

[package.metadata.deb]
maintainer-scripts = "packaging/debian/"
systemd-units = { enable = false }
assets = [
    ["../target/release/stackable-nifi-operator-server", "opt/stackable/nifi-operator/", "755"],
    ["../deploy/crd/nificluster.crd.yaml", "etc/stackable/nifi-operator/crd/", "644"],
    ["../deploy/config-spec/properties.yaml", "etc/stackable/nifi-operator/config-spec/", "644"],

]
