[package]
authors = ["Stackable GmbH <info@stackable.de>"]
description = "Contains the Apache NiFi CRD structs and utilities"
edition = "2021"
license = "OSL-3.0"
name = "stackable-nifi-crd"
repository = "https://github.com/stackabletech/nifi-operator"
version = "0.7.0-nightly"

[dependencies]
indoc = "1.0.7"
xml-rs = "0.8"
serde = "1.0"
serde_json = "1.0"
snafu = "0.7"
rand = "0.8"
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.23.0" }
strum = { version = "0.24", features = ["derive"] }
tracing = "0.1"
