[package]
name = "stackable-nifi-crd"
description = "Contains the Apache NiFi CRD structs and utilities"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]
indoc.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
stackable-operator.workspace = true
strum.workspace = true
tracing.workspace = true
xml-rs.workspace = true

[dev-dependencies]
serde_yaml.workspace = true
