[package]
authors = ["Stackable GmbH <info@stackable.tech>"]
build = "build.rs"
edition = "2021"
description = "Stackable Operator for Apache NiFi"
license = "OSL-3.0"
name = "stackable-nifi-operator"
repository = "https://github.com/stackabletech/nifi-operator"
version = "0.0.0-dev"
publish = false

[dependencies]
anyhow = "1.0"
clap = "4.1"
fnv = "1.0"
futures = { version = "0.3", features = ["compat"] }
pin-project = "1.0"
rand = "0.8"
semver = "1.0"
serde = "1.0"
serde_json = "1.0"
snafu = "0.7"
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.45.1" }
stackable-nifi-crd = { path = "../crd" }
strum = { version = "0.24", features = ["derive"] }
tokio = { version = "1.25", features = ["full"] }
tracing = "0.1"

[build-dependencies]
built = { version = "0.6", features = ["chrono", "git2"] }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.45.1" }
stackable-nifi-crd = { path = "../crd" }
