[package]
name = "stackable-nifi-operator"
description = "Stackable Operator for Apache NiFi"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]
stackable-nifi-crd = { path = "../crd" }

anyhow.workspace = true
clap.workspace = true
fnv.workspace = true
futures.workspace = true
indoc.workspace = true
pin-project.workspace = true
rand.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
stackable-operator.workspace = true
strum.workspace = true
tokio.workspace = true
tracing.workspace = true

[build-dependencies]
built.workspace = true
