[package]
authors = ["Malte Sander <malte.sander.it@gmail.com>"]
description = "Stackable Operator for Apache NiFi - The Operator Library"
edition = "2018"
license = "OSL-3.0"
name = "stackable-nifi-operator"
repository = "https://github.com/stackabletech/nifi-operator"
version = "0.3.0-nightly"

[dependencies]
stackable-nifi-crd = { path = "../crd" }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.3.0" }
stackable-zookeeper-crd = { git = "https://github.com/stackabletech/zookeeper-operator.git", tag = "0.4.1" }

async-trait = "0.1"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.21"
strum_macros = "0.21"
thiserror = "1.0"
tokio = { version = "1.10", features = ["macros"] }
tracing = "0.1"
